--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
         </section>
         <section>
+              <div id="search-not-found"></div>
               <div id="search-found"></div>
               <div id="search-list" class="row row-cols-1 row-cols-md-3 g-4">
               </div>
